--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Add Product</title>
+    <title><%= pageTitle %></title>
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/product.css">
 </head>
@@ -23,10 +23,14 @@
     <main>
         <h1>My Products</h1>
         <p>List of all the products...</p>
+
+        <% if(products.length > 0) { %>
         <div class="grid">
+
+            <% for(let product of products) { %>
             <article class="card product-item">
                 <header class="card__header">
-                    <h1 class="product__title">Great Book</h1>
+                    <h1 class="product__title"><%= product.title %></h1>
                 </header>
                 <div class="card__image">
                     <img src="https://cdn.pixabay.com/photo/2016/03/31/20/51/book-1296045_960_720.png" alt="A Book">
@@ -39,7 +43,11 @@
                     <button class="btn">Add to Cart</button>
                 </div>
             </article>
+            <% } %>
         </div>
+        <% } else { %>
+            <h1>No Products Found</h1>
+        <% } %>
     </main>
 </body>
 
