--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -27,6 +27,8 @@
                                     </p>
                                 </div>
                                 <div class="card__actions">
+                                    <!--new button to view details-->
+                                    <a href="/products/<%= product.id %>" class="btn">Details</a>
                                     <form action="/add-to-cart" method="POST">
                                         <button class="btn">Add to Cart</button>
                                     </form>
