--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -1,21 +1,24 @@
 <%- include('../includes/head.ejs') %>
+<link rel="stylesheet" href="/css/cart.css">
     </head>
 
     <body>
         <%- include('../includes/navigation.ejs') %>
         <main>
             <% if(products.length > 0) { %>
-                <ul>
+                <ul class="cart__item-list">
                     <% products.forEach(prod => { %>
-                        <li>
-                            <p><%= prod.productData.title %> (<%= prod.qty %>)</p>
+                        <li class="cart__item">
+                            <h1><%= prod.title %></h1>
+                            <h2>Quantity: <%= prod.qty %></h2>
                             <form action="/cart-delete-item" method="POST">
-                                <input type="hidden" value="<%= prod.productData.id %>" name="productId">
-                                <button class="btn">Delete</button>
+                                <input type="hidden" value="<%= prod._id %>" name="productId">
+                                <button class="btn danger">Delete</button>
                             </form>
                         </li>
                     <% }); %>
                 </ul>
+                <hr>
             <% } else { %>
                 <h1>Your cart is empty.</h1>
             <% } %>
