--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -9,16 +9,22 @@
                 <ul class="cart__item-list">
                     <% products.forEach(prod => { %>
                         <li class="cart__item">
-                            <h1><%= prod.title %></h1>
+                            <h1><%= prod.productId.title %></h1>
                             <h2>Quantity: <%= prod.qty %></h2>
                             <form action="/cart-delete-item" method="POST">
-                                <input type="hidden" value="<%= prod._id %>" name="productId">
+                                <input type="hidden" value="<%= prod.productId._id %>" name="productId">
                                 <button class="btn danger">Delete</button>
                             </form>
                         </li>
                     <% }); %>
                 </ul>
                 <hr>
+                <div class="centered">
+                    <form action="/create-order" method="POST">
+                        <button type="submit">Order Now!</button>
+                    </form>
+                </div>
+
             <% } else { %>
                 <h1>Your cart is empty.</h1>
             <% } %>
